--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,10 @@ service: hello-serverless
 provider:
   name: aws
   runtime: nodejs12.x
+  region: us-east-1
+  stage: dev
+  memorySize: 128
+  timeout: 10
 
 
 functions:
