--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "serverless-offline": "^6.4.0"
   }
 }
